# wireless-sgx-linux-tui

./: .gitignore  LICENSE  MANIFEST.in  README.md  TUI_NAVIGATION_FIX_SUMMARY.md  debug_test.py  install.sh  pyproject.toml  requirements.txt  setup.py  test_tui_navigation.py  uninstall.sh  update.sh
wirelesssgx/: __init__.py  __main__.py  app.py  cli.py  core.py  network.py  storage.py
wirelesssgx/screens/: __init__.py  autoconnect.py  credentials.py  otp.py  register.py  success.py  welcome.py
