[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wirelesssgx"
version = "1.0.4"
description = "A modern TUI for Wireless@SGx setup on Linux"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["wireless", "singapore", "wifi", "tui", "linux", "networking"]
authors = [
  {name = "Sivasubramanian Ramanathan", email = "hello@sivasub.com"}
]
maintainers = [
  {name = "Sivasubramanian Ramanathan", email = "hello@sivasub.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]

dependencies = [
    "textual>=0.41.0",
    "pycryptodome>=3.19.0",
    "keyring>=24.0.0",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0",
    "click>=8.1.7",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.scripts]
wirelesssgx = "wirelesssgx.app:main"

[project.urls]
Homepage = "https://github.com/siva-sub/wireless-sgx-linux-tui"
Repository = "https://github.com/siva-sub/wireless-sgx-linux-tui"
Issues = "https://github.com/siva-sub/wireless-sgx-linux-tui/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["wirelesssgx*"]
exclude = ["tests*"]